# quant-portfolio-manager

./: .gitignore  CACHING_SUMMARY.md  MASTER_PLAN.md  PHASE1_COMPLETE.md  PHASE1_README.md  PHASE1_UPDATE.md  README.md  TODO.md  app.py  config.py  dcf_cli.py  main.py  pyproject.toml  test_full_pipeline.py
config/: .gitignore
docs/: BACKTEST_AUDIT_REPORT.md  CACHING_STRATEGY.md  HISTORICAL_DATA_ARCHITECTURE.md  HISTORICAL_DATA_IMPLEMENTATION_SUMMARY.md  HISTORICAL_DATA_VALIDATION.md  IMPLEMENTATION_ROADMAP.md  LONG_SHORT_130_30.md  MINIMUM_SHARPE_CONSTRAINT.md  OPTIMIZATION_SUMMARY.md  PHASE2_FINAL_SUMMARY.md  PHASE2_GODS_VALIDATION_REPORT.md  PROJECT_STATE_ANALYSIS.md  QUICK_VALIDATION_GUIDE.md  REGIME_AND_GODS_ANALYSIS.md  REGIME_AND_GODS_GUIDE.md  REPOSITORY_ANALYSIS_REPORT.md  REPOSITORY_OVERVIEW.md
legacy/: ALPHA_VANTAGE_INTEGRATION_ANALYSIS.md  README.md  __init__.py  dcf_engine.py
modules/: __init__.py  utils.py
scripts/: cache_manager.py  demo_batch_caching.py
src/: __init__.py  config.py  constants.py  env_loader.py  logging_config.py  portfolio_snapshot.py
tests/: conftest.py  test_caching.py  test_crisis_periods.py  test_dcf_debug.py  test_ev_sales.py  test_historical_regime.py  test_mini_backtest.py  test_no_lookahead.py  test_phase1_integration.py  test_regime_adjustment.py  test_regime_detection.py  test_regime_detector.py  test_regime_lookahead_bias.py  test_regime_validation.sh  test_user_portfolio.py
tools/: README.md  analyze_efficient_frontier.py  analyze_long_short.py  archive_old_backtests.py  build_regime_history.py  (+2 more)
(+541 files in other folders)
