[project]
name = "quant-portfolio-manager"
version = "0.1.0"
description = "Systematic quantitative portfolio management with factor-based optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.32",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyportfolioopt>=1.5.5",
    "scipy>=1.11.0",
    "cvxpy>=1.4.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=14.0.0",
    "fredapi>=0.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
qpm = "main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
